Refactor ontologies to enhance BSBM vocabulary with additional classes, properties, and constraints for improved inference validation